# src

tello_ros/navigation/: CMakeLists.txt  README.md  package.xml
tello_ros/navigation/include/navigation/: navigation.hpp
tello_ros/navigation/launch/: navigation.launch.py
tello_ros/navigation/scripts/: publisher.py
tello_ros/navigation/src/: navigation.cpp  navigation_node.cpp
tello_ros/tello_driver/src/: video_socket.cpp
tello_ros/tello_gazebo/src/: tello_plugin.cpp
tello_ros/tello_gazebo/worlds/: simple.world
