<?xml version="1.0"?>
<package format="3">

    <name>navigation</name>
    <version>0.1.0</version>
    <description>dupar</description>

    <maintainer email="maja@g.net">maja</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>

    <depend>camera_calibration_parsers</depend>
    <depend>class_loader</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>ros2_shared</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tello_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
